--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,35 @@
 name: Java CI with Maven
 
-# Kab ye workflow chalega
 on:
-  push:                    # jab code main branch me push ho
+  push:
     branches: [ "main" ]
-  pull_request:            # ya PR banega main branch ke liye
+  pull_request:
     branches: [ "main" ]
 
-# Jobs define karna
 jobs:
   build:
-    runs-on: ubuntu-latest  # GitHub ke server pe chalega
+    runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Code checkout
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Java setup
+      # Step 2: Set up JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Build project
+      # Step 3: Install custom jar
+      - name: Install custom jar
+        run: mvn install:install-file -Dfile=libs/common_utillity-0.0.1.jar -DgroupId=com.mapit.igrs -DartifactId=common_utillity -Dversion=0.0.1 -Dpackaging=jar
+
+      # Step 4: Build project
       - name: Build with Maven
         run: mvn clean install -DskipTests
 
-      # Step 4: Run Tests
+      # Step 5: Run Tests
       - name: Run Tests
         run: mvn test
